test/cases/parser/ArrayDim3.errors
ArrayDim3.b:6:16: Syntax error (mixture of fixed and variable-sized dimensions)
